--- a/app/src/main/res/layout/title_bar_add_plan_detail.xml
+++ b/app/src/main/res/layout/title_bar_add_plan_detail.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/tv_cancel_add_plan_detail"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
         android:text="@string/add_plan_detail_cancel"
         android:layout_alignParentLeft="true"
@@ -18,7 +18,7 @@
         android:layout_centerInParent="true"/>
     <TextView
         android:id="@+id/tv_ok_add_plan_detail"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
         android:text="@string/add_plan_detail_ok"
         android:layout_alignParentRight="true"
