--- a/app/src/main/res/layout/adapter_item_plan_no_plan.xml
+++ b/app/src/main/res/layout/adapter_item_plan_no_plan.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:text="@string/ad_item_plan_no_plan"
-    android:textSize="20sp"
-    android:gravity="center">
+    android:layout_height="100dp">
 
-</TextView>
+    <TextView
+        android:id="@+id/ad_no_plan_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center_horizontal"
+        android:text="@string/ad_item_plan_no_plan"
+        android:textSize="20sp">
+
+    </TextView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ad_no_plan_item"
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
+        android:text="@string/ad_item_plan_no_plan_add"
+        android:textSize="16sp">
+
+    </TextView>
+</RelativeLayout>
