--- a/app/src/main/res/layout/adapter_item_plan_category.xml
+++ b/app/src/main/res/layout/adapter_item_plan_category.xml
@@ -6,4 +6,5 @@
     android:layout_marginLeft="15sp"
     android:gravity="center_vertical"
     android:text="@string/plan_today"
-    android:textSize="16sp" />
+    android:textSize="18sp"
+    android:textColor="@color/blackColor" />
