--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,6 +52,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_marginLeft">25dp</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/baseColor</item>
     </style>
 
     <style name="adapter_item_plan_summary_right_text_view">
@@ -61,6 +62,7 @@
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_marginRight">25dp</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/greenColor</item>
     </style>
 
     <style name="popup_window_content">
