--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -14,10 +14,10 @@
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/fr_pc_plan_record_summary"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="0dp" />
 
     <TextView
         android:id="@+id/fr_tv_plan_no_record"
