-e 问题: 实现长按plan，更改plan name 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:orientation="horizontal"
             android:layout_alignParentBottom="true"
             android:gravity="center_vertical"
-            android:background="@color/baseColor">
+            android:background="@color/bottom_tab_back_ground_color">
             <com.github.tinkerti.ziwu.ui.widget.TabIndicatorItemView
                 android:id="@+id/bottom_indicator_plan"
                 android:layout_width="0dp"
