--- a/app/src/main/res/drawable/wi_add_plan_button_background.xml
+++ b/app/src/main/res/drawable/wi_add_plan_button_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#FF00CC"/>
-    <stroke android:color="#FF00CC"/>
+        android:color="@color/add_button_back_ground"/>
+    <stroke android:color="@color/add_button_back_ground"/>
 </shape>
