--- a/app/src/main/res/layout/adapter_record_list_item_detail.xml
+++ b/app/src/main/res/layout/adapter_record_list_item_detail.xml
@@ -2,15 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="30dp"
+    android:gravity="center_horizontal"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_record_list_item_plan_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingLeft="@dimen/dimen_dp_15" />
 
     <TextView
         android:id="@+id/tv_record_list_item_plan_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center" />
 </LinearLayout>
