--- a/app/src/main/res/layout/bar_plan_content_title.xml
+++ b/app/src/main/res/layout/bar_plan_content_title.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/activity_title_bar_color"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/bar_tv_plan_content_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:text="@string/app_name"
-        android:layout_marginLeft="15dp"
         android:layout_centerVertical="true"
-        android:textSize="18sp"/>
+        android:layout_marginLeft="@dimen/dimen_dp_17"
+        android:text="@string/app_name"
+        android:textColor="@color/blackColor"
+        android:textSize="@dimen/text_size_sp_19" />
+
     <ImageView
+        android:id="@+id/iv_more_option"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/dimen_dp_25"
+        android:src="@mipmap/more_option_icon_2" />
 </RelativeLayout>
