--- a/app/src/main/res/layout/wi_bottom_indicator_item.xml
+++ b/app/src/main/res/layout/wi_bottom_indicator_item.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <ImageView
         android:id="@+id/tab_iv_indicator_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:layout_width="@dimen/dimen_dp_25"
+        android:layout_height="@dimen/dimen_dp_25"
+        android:layout_gravity="center" />
+
     <TextView
         android:id="@+id/tab_tv_indicator_text"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/dimen_dp_5"
+        android:textSize="@dimen/text_size_sp_10" />
 </LinearLayout>
