--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dimen_dp_1">1dp</dimen>
+    <dimen name="dimen_dp_4">4dp</dimen>
     <dimen name="dimen_dp_5">5dp</dimen>
+    <dimen name="dimen_dp_8">8dp</dimen>
     <dimen name="dimen_dp_10">10dp</dimen>
     <dimen name="dimen_dp_15">15dp</dimen>
     <dimen name="dimen_dp_14">14dp</dimen>
     <dimen name="dimen_dp_17">17dp</dimen>
+    <dimen name="dimen_dp_18">18dp</dimen>
     <dimen name="dimen_dp_20">20dp</dimen>
+    <dimen name="dimen_dp_25">25dp</dimen>
+    <dimen name="dimen_dp_28">28dp</dimen>
     <dimen name="dimen_dp_32">32dp</dimen>
+    <dimen name="dimen_dp_36">36dp</dimen>
     <dimen name="dimen_dp_40">40dp</dimen>
+    <dimen name="dimen_dp_44">44dp</dimen>
     <dimen name="dimen_dp_48">48dp</dimen>
+    <dimen name="dimen_dp_50">50dp</dimen>
     <dimen name="dimen_dp_60">60dp</dimen>
 
+    <dimen name="text_size_sp_10">10sp</dimen>
     <dimen name="text_size_sp_16">16sp</dimen>
+    <dimen name="text_size_sp_19">19sp</dimen>
 </resources>
