--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,15 +52,14 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_marginLeft">25dp</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/plan_list_name_color</item>
+        <item name="android:textColor">@color/blackColor</item>
     </style>
 
     <style name="adapter_item_plan_summary_right_text_view">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:layout_alignParentRight">true</item>
-        <item name="android:layout_marginRight">25dp</item>
+        <item name="android:layout_marginRight">20dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/greenColor</item>
     </style>
