--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,21 @@
     <dimen name="dimen_dp_60">60dp</dimen>
 
     <dimen name="text_size_sp_10">10sp</dimen>
+    <dimen name="text_size_sp_11">11sp</dimen>
+    <dimen name="text_size_sp_12">12sp</dimen>
+    <dimen name="text_size_sp_13">13sp</dimen>
+    <dimen name="text_size_sp_14">14sp</dimen>
+    <dimen name="text_size_sp_15">15sp</dimen>
     <dimen name="text_size_sp_16">16sp</dimen>
+    <dimen name="text_size_sp_17">17sp</dimen>
+    <dimen name="text_size_sp_18">18sp</dimen>
     <dimen name="text_size_sp_19">19sp</dimen>
+    <dimen name="text_size_sp_20">20sp</dimen>
+    <dimen name="text_size_sp_21">22sp</dimen>
+    <dimen name="text_size_sp_23">23sp</dimen>
+    <dimen name="text_size_sp_24">24sp</dimen>
+    <dimen name="text_size_sp_25">25sp</dimen>
+    <dimen name="text_size_sp_26">26sp</dimen>
+    <dimen name="text_size_sp_27">27sp</dimen>
+    <dimen name="text_size_sp_28">28sp</dimen>
 </resources>
