-e 问题: 修改添加任务页面； 原因: 解决方案: Reviewer: 工单号: X Log: X

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="dimen_dp_48">48dp</dimen>
     <dimen name="dimen_dp_50">50dp</dimen>
     <dimen name="dimen_dp_60">60dp</dimen>
+    <dimen name="dimen_dp_120">120dp</dimen>
 
     <dimen name="text_size_sp_10">10sp</dimen>
     <dimen name="text_size_sp_11">11sp</dimen>
