--- a/app/src/main/res/layout/bar_plan_content_title.xml
+++ b/app/src/main/res/layout/bar_plan_content_title.xml
@@ -16,12 +16,17 @@
         android:textColor="@color/blackColor"
         android:textSize="@dimen/text_size_sp_19" />
 
-    <ImageView
+    <FrameLayout
         android:id="@+id/iv_more_option"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/dimen_dp_25"
-        android:src="@mipmap/more_option_icon_2" />
+        android:layout_width="@dimen/dimen_dp_60"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@mipmap/more_option_icon_2" />
+    </FrameLayout>
+
 </RelativeLayout>
