--- a/app/src/main/res/layout/title_bar_add_plan_detail.xml
+++ b/app/src/main/res/layout/title_bar_add_plan_detail.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/tv_cancel_add_plan_detail"
         android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:text="@string/add_plan_detail_cancel"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="15dp"
         android:layout_centerVertical="true"
-        android:gravity="center_vertical"/>
+        android:layout_marginLeft="15dp"
+        android:gravity="center_vertical"
+        android:text="@string/add_plan_detail_cancel"
+        android:textColor="@color/blackColor"
+        android:textSize="@dimen/text_size_sp_16" />
+
     <TextView
         android:id="@+id/tv_add_plan_detail_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:textColor="@color/blackColor"
+        android:textSize="@dimen/text_size_sp_16" />
+
     <TextView
         android:id="@+id/tv_ok_add_plan_detail"
         android:layout_width="40dp"
         android:layout_height="match_parent"
-        android:text="@string/add_plan_detail_ok"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
         android:layout_centerVertical="true"
-        android:gravity="center_vertical"/>
+        android:layout_marginRight="15dp"
+        android:gravity="center_vertical"
+        android:text="@string/add_plan_detail_ok"
+        android:textColor="@color/blackColor"
+        android:textSize="@dimen/text_size_sp_16" />
 </RelativeLayout>
