--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,17 +78,18 @@
         <item name="android:paddingRight">8dp</item>
     </style>
 
-     <style name="long_click_option_dialog_content_text_view">
-         <item name="android:layout_width">wrap_content</item>
-         <item name="android:layout_height">wrap_content</item>
-         <item name="android:textSize">18sp</item>
-         <item name="android:textColor">#000000</item>
-         <item name="android:layout_gravity">center</item>
-         <item name="android:layout_marginLeft">@dimen/dimen_dp_15</item>
-         <item name="android:layout_marginTop">@dimen/dimen_dp_15</item>
-         <item name="android:layout_marginRight">@dimen/dimen_dp_15</item>
-         <item name="android:layout_marginBottom">@dimen/dimen_dp_15</item>
-     </style>
+    <style name="long_click_option_dialog_content_text_view">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_dp_15</item>
+        <item name="android:layout_marginTop">@dimen/dimen_dp_15</item>
+        <item name="android:layout_marginRight">@dimen/dimen_dp_15</item>
+        <item name="android:layout_marginBottom">@dimen/dimen_dp_15</item>
+    </style>
+
     <style name="rce_vertical_light_thin_divider">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">0.5dp</item>
@@ -103,5 +104,14 @@
     <declare-styleable name="TabIndicatorItemView">
         <attr name="IndicatorButton" format="reference" />
         <attr name="IndicatorText" format="reference" />
+    </declare-styleable>
+
+    <declare-styleable name="OptionMenuItemLayout">
+        <attr name="preIcon" format="reference" />
+        <attr name="content" format="string" />
+    </declare-styleable>
+
+    <declare-styleable name="AddTaskItemLayout">
+        <attr name="nameTag" format="string" />
     </declare-styleable>
 </resources>
